--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     
     <title>Fosterburg Baptist Church</title>
   </head>
-  <body style="margin: 0;">
+  <body style="margin: 0;  background-color: #e9e9e9">
     <div id="root"></div>
     <script src="./build/bundle.js"></script>
   </body>
