Add audio options

--- a/index.html
+++ b/index.html
@@ -6,12 +6,12 @@
     <meta charset="utf-8">
     <meta http-equiv="expires" content="0">
     <link href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifj$FN9MuhOf23Q9Ifjh" crossorigin="anonymous">
-    
+    <link rel="shortcut icon" type="image/png" href="/assets/favicon.ico"/>
     <title>Fosterburg Baptist Church</title>
   </head>
   <body style="margin: 0;  background-color: #e9e9e9">
     <div id="root"></div>
-    <script src="./build/bundle.js"></script>
+    <script src="/build/bundle.js"></script>
   </body>
 </html>
 
